--- a/index.html
+++ b/index.html
@@ -38,26 +38,40 @@
 
   <!-- Critical CSS -->
   <style>
-    :root{--bg:#ffffff;--text:#0f172a;--muted:#64748b;--ring:#e5e7eb;--primary:#1e40af}
-    *{box-sizing:border-box} html,body{height:100%}
-    body{margin:0;background:var(--bg);color:var(--text);font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;line-height:1.6}
+    :root{
+      --bg:#ffffff;--text:#0f172a;--muted:#64748b;--ring:#e5e7eb;--primary:#1e40af;
+      --card:#ffffff;--elev:0 1px 2px rgba(15,23,42,.04)
+    }
+    @media (prefers-color-scheme: dark){
+      :root{
+        --bg:#0b1220;--text:#e5e7eb;--muted:#94a3b8;--ring:#1f2a44;--primary:#93c5fd;
+        --card:#0f172a;--elev:0 1px 2px rgba(0,0,0,.4)
+      }
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;background:var(--bg);color:var(--text);
+      font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;line-height:1.6
+    }
     a{color:inherit;text-decoration:none}
+    a:focus-visible,button:focus-visible{outline:2px solid var(--primary);outline-offset:2px;border-radius:6px}
     .container{width:min(1120px,92%);margin-inline:auto}
     .skip-link{position:absolute;inset-inline-start:0;top:-40px;background:#000;color:#fff;padding:.5rem 1rem;z-index:100}
     .skip-link:focus{top:0}
 
-    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
+    .navbar{position:sticky;top:0;background:var(--card);border-bottom:1px solid var(--ring);z-index:40;backdrop-filter:saturate(140%) blur(8px)}
     .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.6rem;font-weight:700}
-    .logo{border-radius:8px}
-    .menu-toggle{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--ring);background:#fff;padding:.4rem .6rem;border-radius:.5rem;cursor:pointer}
+    .logo{border-radius:8px;box-shadow:var(--elev)}
+    .menu-toggle{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--ring);background:var(--card);color:var(--text);padding:.4rem .6rem;border-radius:.5rem;cursor:pointer}
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.4rem .2rem;border-radius:.5rem}
-    .lang-toggle{border:1px solid var(--ring);background:#fff;padding:.4rem .6rem;border-radius:.5rem;cursor:pointer}
+    .lang-toggle{border:1px solid var(--ring);background:var(--card);color:var(--text);padding:.4rem .6rem;border-radius:.5rem;cursor:pointer}
 
     @media (max-width:960px){
       .nav-links{
-        position:absolute;inset-inline:0;top:64px;background:#fff;border-bottom:1px solid var(--ring);
+        position:absolute;inset-inline:0;top:64px;background:var(--card);border-bottom:1px solid var(--ring);
         padding:1rem;flex-direction:column;display:none
       }
       .nav-links[data-open="true"]{display:flex}
@@ -70,18 +84,18 @@
     p{margin:.3rem 0 1rem}
     .cta-row{display:flex;gap:.8rem;flex-wrap:wrap}
     .btn{display:inline-block;padding:.7rem 1rem;border-radius:.6rem;border:1px solid var(--primary)}
-    .btn-primary{background:var(--primary);color:#fff}
-    .btn-outline{background:#fff;color:var(--primary)}
-    .hero-img img{width:100%;height:auto;border-radius:12px;display:block}
+    .btn-primary{background:var(--primary);color:#0b1220}
+    .btn-outline{background:transparent;color:var(--primary)}
+    .hero-img img{width:100%;height:auto;border-radius:12px;display:block;box-shadow:var(--elev)}
 
     .section-head{display:flex;align-items:center;justify-content:space-between;margin:1.8rem 0 1rem}
     .grid{display:grid;gap:1rem}
     .grid-2{grid-template-columns:repeat(2,1fr)}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     @media (max-width:960px){.grid-2,.grid-3{grid-template-columns:1fr}}
-    .card{border:1px solid var(--ring);border-radius:12px;padding:1rem;background:#fff}
+    .card{border:1px solid var(--ring);border-radius:12px;padding:1rem;background:var(--card);box-shadow:var(--elev)}
     .muted{color:var(--muted)}
-    footer{border-top:1px solid var(--ring);margin-top:2rem;padding:1rem 0;background:#fff}
+    footer{border-top:1px solid var(--ring);margin-top:2rem;padding:1rem 0;background:var(--card)}
     .foot{display:flex;justify-content:space-between;align-items:center;gap:1rem;flex-wrap:wrap}
 
     @media (prefers-reduced-motion: reduce){
@@ -198,43 +212,69 @@
   <!-- Helpers -->
   <script>
     // سنة الحقوق
-    (function(){const y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear();})();
+    (function(){
+      const y=document.getElementById('year');
+      if(y) y.textContent=new Date().getFullYear();
+    })();
 
     // منيو الجوال + وصولية
     (function(){
       const btn = document.getElementById('menu-toggle');
       const nav = document.getElementById('primary-nav');
-      const mq  = matchMedia('(min-width:961px)');
+      if(!btn || !nav) return;
+
+      const mq  = window.matchMedia('(min-width:961px)');
 
       function setMenu(open){
         nav.setAttribute('data-open', String(open));
         btn.setAttribute('aria-expanded', String(open));
+        // على سطح المكتب تبقى ظاهرة دائمًا، على الجوال تُخفى إذا كانت مغلقة
         nav.setAttribute('aria-hidden', String(!open && !mq.matches));
-        if(open){ (nav.querySelector('a,button')||btn).focus(); }
+        if(open){
+          const focusable = nav.querySelector('a,button');
+          (focusable || btn).focus();
+        }
       }
+
       function init(){
+        // حالة أولية متسقة مع CSS
         setMenu(false);
         nav.setAttribute('aria-hidden', mq.matches ? 'false' : 'true');
       }
       init();
 
-      btn?.addEventListener('click', ()=> setMenu(nav.getAttribute('data-open')!=='true'));
-      mq.addEventListener('change', e=>{ setMenu(false); nav.setAttribute('aria-hidden', e.matches ? 'false':'true'); });
+      btn.addEventListener('click', ()=> setMenu(nav.getAttribute('data-open')!=='true'));
+
+      mq.addEventListener('change', (e)=>{
+        // عند الانتقال بين الشاشات نغلق القائمة على الجوال ونُظهرها على الديسكتوب
+        setMenu(false);
+        nav.setAttribute('aria-hidden', e.matches ? 'false':'true');
+      });
+
       document.addEventListener('click', (e)=>{
         const open = nav.getAttribute('data-open')==='true';
-        if(open && !nav.contains(e.target) && !btn.contains(e.target)) setMenu(false);
+        const target = e.target;
+        if(!open) return;
+        if(target instanceof Node && !nav.contains(target) && !btn.contains(target)){
+          setMenu(false);
+        }
       });
+
       document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
+
       // إغلاق القائمة عند اختيار رابط
       nav.addEventListener('click', (e)=>{
-        const t=e.target.closest('a'); if(t) setMenu(false);
+        const t = (e.target instanceof Element) ? e.target.closest('a') : null;
+        if(t) setMenu(false);
       });
     })();
 
     // تبديل اللغة + حفظ التفضيل
     (function(){
       const t=document.getElementById('lang-toggle'); if(!t) return;
+
       function isEn(){ return localStorage.getItem('khotwa_lang')==='en'; }
+
       function set(lang){
         document.querySelectorAll('[data-lang]').forEach(el=>{
           const want = el.getAttribute('data-lang')===lang;
@@ -247,6 +287,7 @@
         document.documentElement.dir  = (lang==='ar')?'rtl':'ltr';
         localStorage.setItem('khotwa_lang', lang);
       }
+
       set(isEn()?'en':'ar');
       t.addEventListener('click',()=> set(isEn()?'ar':'en'));
     })();
