--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:var(--surface)}
+    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:var(--surface);line-height:1.6}
     a{color:inherit;text-decoration:none}
     .container{width:min(1120px,92%);margin-inline:auto}
 
@@ -121,7 +121,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
-  <a class="skip-link" href="#main" data-lang="en" hidden>Skip to content</a>
+  <a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
 
   <!-- NAVBAR -->
   <nav class="navbar" aria-label="الشريط العلوي">
@@ -129,22 +129,22 @@
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
         <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
-        <span data-lang="en" hidden>Khotwa Student Council</span>
+        <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
       </a>
 
       <button id="menu-toggle" class="menu-toggle" type="button"
               aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
-        <span data-lang="ar">القائمة</span><span data-lang="en" hidden>Menu</span>
+        <span data-lang="ar">القائمة</span><span data-lang="en" hidden aria-hidden="true">Menu</span>
       </button>
 
       <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
-        <a href="/about.html" aria-current="page"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
-        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
-        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
-        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
-        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
-        <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
+        <a href="/about.html" aria-current="page"><span data-lang="ar">من نحن</span><span data-lang="en" hidden aria-hidden="true">About</span></a>
+        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden aria-hidden="true">News</span></a>
+        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden aria-hidden="true">Events</span></a>
+        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden aria-hidden="true">Calendar</span></a>
+        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden aria-hidden="true">Resources</span></a>
+        <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden aria-hidden="true">Contact</span></a>
         <button id="lang-toggle" class="lang-toggle" type="button" aria-pressed="false" aria-label="تبديل اللغة">English</button>
       </div>
     </div>
@@ -155,17 +155,17 @@
     <section>
       <div class="section-head">
         <h1 data-lang="ar">من نحن</h1>
-        <h1 data-lang="en" hidden>About Us</h1>
+        <h1 data-lang="en" hidden aria-hidden="true">About Us</h1>
       </div>
       <p class="muted" data-lang="ar">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن.</p>
-      <p class="muted" data-lang="en" hidden>The Khotwa Student Council represents students of the Khotwa program at La Trobe University – Melbourne.</p>
+      <p class="muted" data-lang="en" hidden aria-hidden="true">The Khotwa Student Council represents students of the Khotwa program at La Trobe University – Melbourne.</p>
 
       <!-- Cards -->
       <div class="grid grid-2" style="margin-top:1rem">
-        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p><p data-lang="en" hidden>A supportive and proactive student community contributing to members’ success.</p></article>
-        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب.</p><p data-lang="en" hidden>Providing opportunities, activities, and services that enhance the student experience.</p></article>
-        <article class="card"><h3 data-lang="ar">القيم</h3><h3 data-lang="en" hidden>Values</h3><p data-lang="ar">العمل الجماعي، الشفافية، التطوع، الابتكار، المسؤولية.</p><p data-lang="en" hidden>Teamwork, transparency, volunteering, innovation, and responsibility.</p></article>
-        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون.</p><p data-lang="en" hidden>President, Vice President, team leaders (events, media, relations), and coordinators.</p></article>
+        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden aria-hidden="true">Vision</h3><p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p><p data-lang="en" hidden aria-hidden="true">A supportive and proactive student community contributing to members’ success.</p></article>
+        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden aria-hidden="true">Mission</h3><p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب.</p><p data-lang="en" hidden aria-hidden="true">Providing opportunities, activities, and services that enhance the student experience.</p></article>
+        <article class="card"><h3 data-lang="ar">القيم</h3><h3 data-lang="en" hidden aria-hidden="true">Values</h3><p data-lang="ar">العمل الجماعي، الشفافية، التطوع، الابتكار، المسؤولية.</p><p data-lang="en" hidden aria-hidden="true">Teamwork, transparency, volunteering, innovation, and responsibility.</p></article>
+        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden aria-hidden="true">Structure</h3><p data-lang="ar">رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون.</p><p data-lang="en" hidden aria-hidden="true">President, Vice President, team leaders (events, media, relations), and coordinators.</p></article>
       </div>
     </section>
 
@@ -173,7 +173,7 @@
     <section>
       <div class="section-head">
         <h2 data-lang="ar">أعضاء المجلس</h2>
-        <h2 data-lang="en" hidden>Council Members</h2>
+        <h2 data-lang="en" hidden aria-hidden="true">Council Members</h2>
       </div>
 
       <div class="members">
@@ -181,50 +181,50 @@
         <div class="member-card">
           <img src="https://f.top4top.io/p_35166op0u4.jpg" alt="حمد الهاجري – الرئيس" width="360" height="240"
                loading="lazy" decoding="async" style="object-position:50% 30%;" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden>Hamad Al-Hajeri</h3>
-          <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden>President</p>
+          <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden aria-hidden="true">Hamad Al-Hajeri</h3>
+          <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden aria-hidden="true">President</p>
         </div>
 
         <div class="member-card">
           <img src="https://c.top4top.io/p_3516ojbq71.jpg" alt="عبدالله الجابري – نائب الرئيس" width="360" height="240"
                loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden>Abdullah Al-Jaberi</h3>
-          <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden>Vice President</p>
+          <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden aria-hidden="true">Abdullah Al-Jaberi</h3>
+          <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden aria-hidden="true">Vice President</p>
         </div>
 
         <div class="member-card">
           <img src="https://d.top4top.io/p_3516sprel2.jpg" alt="عبدالهادي المري – قائد المجموعة" width="360" height="240"
                loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden>Abdulhadi Al-Marri</h3>
-          <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden>Team Leader</p>
+          <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden aria-hidden="true">Abdulhadi Al-Marri</h3>
+          <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden aria-hidden="true">Team Leader</p>
         </div>
 
         <div class="member-card">
           <img src="https://h.top4top.io/p_3516xcf386.jpg" alt="حسن الصيعري – منسق الفعاليات" width="360" height="240"
                loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden>Hassan Al-Sieari</h3>
-          <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden>Events Coordinator</p>
+          <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden aria-hidden="true">Hassan Al-Sieari</h3>
+          <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden aria-hidden="true">Events Coordinator</p>
         </div>
 
         <div class="member-card">
           <img src="https://g.top4top.io/p_3516zrfo75.jpg" alt="حمد المري – منسق الإعلام" width="360" height="240"
                loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden>Hamad Al-Marri</h3>
-          <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden>Media Coordinator</p>
+          <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden aria-hidden="true">Hamad Al-Marri</h3>
+          <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden aria-hidden="true">Media Coordinator</p>
         </div>
 
         <div class="member-card">
           <img src="https://e.top4top.io/p_35164gg6m3.jpg" alt="محمد الكثيري – عضو" width="360" height="240"
                loading="lazy" decoding="async" style="object-position:50% 35%;" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden>Mohamed Al-Katheeri</h3>
-          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
+          <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden aria-hidden="true">Mohamed Al-Katheeri</h3>
+          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden aria-hidden="true">Member</p>
         </div>
 
         <div class="member-card">
           <img src="https://i.top4top.io/p_35168rtso7.jpg" alt="موزة العلي – عضو" width="360" height="240"
                loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden>Mouza Al-Ali</h3>
-          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
+          <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden aria-hidden="true">Mouza Al-Ali</h3>
+          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden aria-hidden="true">Member</p>
         </div>
       </div>
     </section>
@@ -237,59 +237,96 @@
     </div>
   </footer>
 
-  <!-- JS: منيو + اللغة + فallback صور + سنة الحقوق -->
+  <!-- JS: منيو + اللغة + فfallback صور + سنة الحقوق -->
   <script>
-    // سنة الحقوق
-    document.getElementById('year').textContent = new Date().getFullYear();
+    // سنة الحقوق (مع تحقّق)
+    (function(){
+      const y=document.getElementById('year');
+      if(y) y.textContent = new Date().getFullYear();
+    })();
 
-    // منيو
-    const menuBtn = document.getElementById('menu-toggle');
-    const primaryNav = document.getElementById('primary-nav');
-    const mq = matchMedia('(min-width:901px)');
-    function setMenu(open){
-      primaryNav.setAttribute('data-open', String(open));
-      menuBtn.setAttribute('aria-expanded', String(open));
-      primaryNav.setAttribute('aria-hidden', String(!open && !mq.matches));
-      if(open){ primaryNav.querySelector('a,button')?.focus(); }
-    }
-    function initMenu(){
-      primaryNav.setAttribute('data-open','false');
-      menuBtn.setAttribute('aria-expanded','false');
-      primaryNav.setAttribute('aria-hidden', mq.matches ? 'false' : 'true');
-    }
-    initMenu();
-    menuBtn.addEventListener('click',()=> setMenu(primaryNav.getAttribute('data-open')!=='true'));
-    mq.addEventListener('change', e=>{
-      primaryNav.setAttribute('data-open','false');
-      menuBtn.setAttribute('aria-expanded','false');
-      primaryNav.setAttribute('aria-hidden', e.matches ? 'false' : 'true');
-    });
-    document.addEventListener('click', (e)=>{
-      const open = primaryNav.getAttribute('data-open')==='true';
-      if(open && !primaryNav.contains(e.target) && !menuBtn.contains(e.target)) setMenu(false);
-    });
-    document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
+    // منيو (وصولية + توافق مع الميديا كويري)
+    (function(){
+      const menuBtn = document.getElementById('menu-toggle');
+      const primaryNav = document.getElementById('primary-nav');
+      if(!menuBtn || !primaryNav) return;
 
-    // اللغة مع حفظ التفضيل
-    const toggleBtn = document.getElementById('lang-toggle');
-    let isEn = localStorage.getItem('khotwa_lang') === 'en';
-    function setLang(en){
-      document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
-      document.querySelectorAll('[data-lang="en"]').forEach(el => el.hidden = !en);
-      document.documentElement.lang = en ? 'en' : 'ar';
-      document.documentElement.dir  = en ? 'ltr' : 'rtl';
-      toggleBtn.textContent = en ? 'العربية' : 'English';
-      toggleBtn.setAttribute('aria-pressed', String(en));
-      localStorage.setItem('khotwa_lang', en ? 'en' : 'ar');
-    }
-    toggleBtn.addEventListener('click',()=> setLang(!(localStorage.getItem('khotwa_lang') === 'en')));
-    setLang(isEn);
+      const mq = window.matchMedia('(min-width:901px)');
 
-    // Fallback تلقائي للصور الخارجية (لتفادي أخطاء DNS/حجب)
-    const FALLBACK = '/assets/apple-touch-icon.png';
-    document.querySelectorAll('.member-card img').forEach(img=>{
-      img.addEventListener('error', ()=>{ if(img.src !== location.origin + FALLBACK){ img.src = FALLBACK; } });
-    });
+      function setMenu(open){
+        primaryNav.setAttribute('data-open', String(open));
+        menuBtn.setAttribute('aria-expanded', String(open));
+        primaryNav.setAttribute('aria-hidden', String(!open && !mq.matches));
+        if(open){
+          const focusable = primaryNav.querySelector('a,button');
+          (focusable || menuBtn).focus();
+        }
+      }
+      function initMenu(){
+        setMenu(false);
+        primaryNav.setAttribute('aria-hidden', mq.matches ? 'false' : 'true');
+      }
+      initMenu();
+
+      menuBtn.addEventListener('click', ()=> setMenu(primaryNav.getAttribute('data-open')!=='true'));
+
+      mq.addEventListener('change', (e)=>{
+        setMenu(false);
+        primaryNav.setAttribute('aria-hidden', e.matches ? 'false' : 'true');
+      });
+
+      document.addEventListener('click', (e)=>{
+        const open = primaryNav.getAttribute('data-open')==='true';
+        const t = e.target;
+        if(!open) return;
+        if(t instanceof Node && !primaryNav.contains(t) && !menuBtn.contains(t)){
+          setMenu(false);
+        }
+      });
+
+      document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
+
+      // إغلاق عند اختيار رابط
+      primaryNav.addEventListener('click', (e)=>{
+        const link = (e.target instanceof Element) ? e.target.closest('a') : null;
+        if(link) setMenu(false);
+      });
+    })();
+
+    // اللغة مع حفظ التفضيل + سمات aria-hidden
+    (function(){
+      const toggleBtn = document.getElementById('lang-toggle');
+      if(!toggleBtn) return;
+
+      function isEn(){ return localStorage.getItem('khotwa_lang')==='en'; }
+
+      function setLang(lang){ // 'ar' | 'en'
+        document.querySelectorAll('[data-lang]').forEach(el=>{
+          const want = el.getAttribute('data-lang')===lang;
+          el.hidden = !want;
+          el.setAttribute('aria-hidden', String(!want));
+        });
+        document.documentElement.lang = (lang==='ar')?'ar':'en';
+        document.documentElement.dir  = (lang==='ar')?'rtl':'ltr';
+        toggleBtn.textContent = (lang==='ar')?'English':'العربية';
+        toggleBtn.setAttribute('aria-pressed', String(lang!=='ar'));
+        localStorage.setItem('khotwa_lang', lang);
+      }
+
+      setLang(isEn() ? 'en' : 'ar');
+      toggleBtn.addEventListener('click', ()=> setLang(isEn() ? 'ar' : 'en'));
+    })();
+
+    // Fallback تلقائي للصور الخارجية (DNS/حجب)
+    (function(){
+      const FALLBACK = '/assets/apple-touch-icon.png';
+      document.querySelectorAll('.member-card img').forEach(img=>{
+        img.addEventListener('error', ()=>{
+          const absoluteFallback = new URL(FALLBACK, location.origin).href;
+          if(img.src !== absoluteFallback){ img.src = absoluteFallback; }
+        }, { once:true });
+      });
+    })();
   </script>
 
   <script src="/assets/cms-boot.js" defer></script>
