--- a/admin/index.html
+++ b/admin/index.html
@@ -5,23 +5,209 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>لوحة الإدارة – Khotwa</title>
   <meta name="robots" content="noindex,nofollow"/>
+
   <style>
-    :root{--ring:#e5e7eb}
+    :root{
+      --bg:#ffffff; --surface:#ffffff; --text:#0f172a; --muted:#64748b; --ring:#e5e7eb;
+      --primary:#1e40af; --primary-600:#1d4ed8;
+      --radius:14px; --container: min(1200px,94%); --header-h:68px;
+      --sh:0 8px 30px rgba(2,6,23,.06);
+    }
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Arial,sans-serif}
-    header{padding:12px 16px;border-bottom:1px solid var(--ring);display:flex;gap:.6rem;align-items:center}
-    .dot{width:8px;height:8px;border-radius:50%;background:#10b981}
-    .muted{color:#6b7280}
+    html,body{height:100%}
+    body{
+      margin:0; color:var(--text); background:var(--bg);
+      font-family:system-ui,-apple-system,"Segoe UI","Dubai","Tahoma",Arial,sans-serif;
+      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+    }
+    .container{width:var(--container); margin-inline:auto}
+
+    /* ===== Header ===== */
+    header{
+      position:sticky; inset-block-start:0; height:var(--header-h);
+      border-bottom:1px solid var(--ring);
+      background:color-mix(in oklab, var(--surface) 88%, transparent);
+      backdrop-filter:blur(8px); z-index:50;
+    }
+    .head{
+      display:flex; align-items:center; gap:.8rem; padding-block:.7rem;
+    }
+    .brand{display:flex; align-items:center; gap:.6rem; font-weight:800}
+    .brand img{inline-size:38px; block-size:38px; border-radius:12px; object-fit:cover; box-shadow:0 2px 8px rgba(0,0,0,.06)}
+    .dot{inline-size:9px; block-size:9px; border-radius:50%; background:#10b981}
+    .muted{color:var(--muted)}
+    .actions{margin-inline-start:auto; display:flex; align-items:center; gap:.5rem; flex-wrap:wrap}
+    .btn, .pill{
+      display:inline-flex; align-items:center; gap:.45rem; padding:.45rem .7rem; border-radius:999px;
+      border:1px solid var(--ring); background:#fff; color:inherit; text-decoration:none; font-weight:600; cursor:pointer;
+    }
+    .btn-primary{background:var(--primary); color:#fff; border-color:transparent}
+    .btn:hover{box-shadow:0 2px 10px rgba(2,6,23,.08)}
+    .icon{inline-size:18px; block-size:18px}
+
+    /* ===== Banner (2FA) ===== */
+    .banner{
+      background:#f8fafc; border-block:1px solid var(--ring);
+      padding:.7rem 0; font-size:.95rem;
+    }
+    .banner .container{display:flex; gap:.8rem; align-items:center; justify-content:space-between; flex-wrap:wrap}
+    .banner a{color:var(--primary); text-decoration:underline}
+
+    /* ===== Content wrapper around the CMS app ===== */
+    #nc-root{padding-block:16px 24px}
+    .cms-wrap{width:var(--container); margin-inline:auto}
+
+    /* ===== Stats ===== */
+    .stats{
+      display:grid; grid-template-columns:repeat(3,1fr); gap:.8rem; margin:12px auto 0; width:var(--container);
+    }
+    .card{
+      border:1px solid var(--ring); border-radius:16px; background:#fff; box-shadow:var(--sh);
+      padding:12px 14px; display:grid; gap:2px;
+    }
+    .card .label{color:var(--muted); font-size:.9rem}
+    .card .value{font-size:1.4rem; font-weight:800}
+
+    /* ===== Responsive tweaks ===== */
+    @media (max-width:900px){
+      :root{ --container: min(100%, 96%) }
+      .brand span{display:none} /* اختزال الاسم على الشاشات الصغيرة */
+      .actions{gap:.4rem}
+      .stats{grid-template-columns:1fr; gap:.6rem}
+      .btn, .pill{padding:.4rem .6rem}
+      .brand img{inline-size:34px; block-size:34px}
+    }
+
+    /* ===== Dark mode (system) ===== */
+    @media (prefers-color-scheme: dark){
+      :root{ --bg:#0a0f1a; --surface:#0b1220; --ring:#1f2937; --text:#e5e7eb; --muted:#9ca3af; --sh:0 8px 30px rgba(0,0,0,.25) }
+      header{background:color-mix(in oklab, var(--surface) 92%, transparent)}
+      .btn,.pill,.card{background:#0f172a; border-color:var(--ring); color:var(--text)}
+      .banner{background:#0c1220}
+    }
+
+    /* A11y focus */
+    :where(a,button,[role="button"]):focus-visible{outline:3px solid #2563eb; outline-offset:3px; border-radius:10px}
   </style>
 </head>
 <body>
-  <header dir="rtl">
-    <span class="dot" aria-hidden="true"></span>
-    <strong>لوحة الإدارة – Khotwa</strong>
-    <span class="muted">(تعمل عبر Decap CMS)</span>
+  <!-- Header -->
+  <header aria-label="شريط علوي">
+    <div class="container head">
+      <a class="brand" href="/" target="_blank" rel="noopener" aria-label="فتح الموقع في تبويب جديد">
+        <img src="/assets/apple-touch-icon.png" alt="" width="38" height="38" decoding="async" loading="lazy">
+        <span>Khotwa</span>
+      </a>
+      <span class="muted">لوحة الإدارة</span>
+      <span class="dot" title="متصل" aria-hidden="true"></span>
+
+      <div class="actions">
+        <!-- (1) زر تبديل اللغة -->
+        <button id="langBtn" class="pill" type="button" aria-pressed="false" aria-label="تبديل اللغة">English</button>
+
+        <!-- (3) روابط سريعة لمحرر Decap -->
+        <a class="btn" href="#/collections/settings/entries/site" aria-label="فتح إعدادات الموقع">إعدادات</a>
+        <a class="btn" href="#/collections/events_json/entries/events" aria-label="فتح بيانات الفعاليات">الفعاليات (JSON)</a>
+        <a class="btn" href="#/collections/news_json/entries/news" aria-label="فتح بيانات الأخبار">الأخبار (JSON)</a>
+        <a class="btn btn-primary" href="/index.html" target="_blank" rel="noopener" aria-label="فتح الموقع">فتح الموقع ↗</a>
+      </div>
+    </div>
   </header>
 
-  <!-- واجهة Decap CMS -->
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <!-- (10) تنبيه أمني: 2FA -->
+  <div class="banner" role="note">
+    <div class="container">
+      <div>ننصحك بتفعيل التحقّق بخطوتين (2FA) لحماية حساب نتلايف.</div>
+      <a href="https://docs.netlify.com/manage/security/secure-netlify-access/enforce-2fa/" target="_blank" rel="noopener">تعرف على كيفية تفعيل 2FA ↗</a>
+    </div>
+  </div>
+
+  <!-- (4) إحصاءات سريعة -->
+  <section class="stats" aria-label="إحصاءات المحتوى">
+    <div class="card">
+      <div class="label">الأخبار</div>
+      <div class="value" id="stat-news">—</div>
+    </div>
+    <div class="card">
+      <div class="label">الفعاليات القادمة</div>
+      <div class="value" id="stat-events">—</div>
+    </div>
+    <div class="card">
+      <div class="label">آخر تحديث</div>
+      <div class="value" id="stat-updated">—</div>
+    </div>
+  </section>
+
+  <!-- غلاف تطبيق Decap (لا نعدل داخله) -->
+  <div class="cms-wrap">
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  </div>
+
+  <script>
+    // ===== (1) تبديل اللغة (RTL/LTR) مع حفظ التفضيل =====
+    (function(){
+      const btn = document.getElementById('langBtn');
+      function isEn(){ return localStorage.getItem('khotwa_admin_lang') === 'en'; }
+      function setLang(en){
+        document.documentElement.lang = en ? 'en' : 'ar';
+        document.documentElement.dir  = en ? 'ltr' : 'rtl';
+        btn.textContent = en ? 'العربية' : 'English';
+        btn.setAttribute('aria-pressed', String(en));
+        localStorage.setItem('khotwa_admin_lang', en ? 'en' : 'ar');
+      }
+      setLang(isEn());
+      btn.addEventListener('click', ()=> setLang(!isEn()));
+    })();
+
+    // ===== (4) الإحصاءات: قراءة JSON وحساب الأعداد =====
+    (async function stats(){
+      const elNews  = document.getElementById('stat-news');
+      const elEv    = document.getElementById('stat-events');
+      const elUpd   = document.getElementById('stat-updated');
+
+      const fmt = new Intl.DateTimeFormat('ar', { dateStyle:'medium', timeStyle:'short' });
+      elUpd.textContent = fmt.format(new Date());
+
+      try{
+        // ملاحظة: نفحص res.ok حسب توصية MDN
+        const [newsRes, eventsRes] = await Promise.all([
+          fetch('/data/news.json?ts=' + Date.now(), { cache: 'no-store' }),
+          fetch('/data/events.json?ts=' + Date.now(), { cache: 'no-store' })
+        ]);
+        if(!newsRes.ok) throw new Error('HTTP '+newsRes.status);
+        if(!eventsRes.ok) throw new Error('HTTP '+eventsRes.status);
+
+        const newsData   = await newsRes.json();
+        const eventsData = await eventsRes.json();
+
+        const newsItems   = Array.isArray(newsData.items)   ? newsData.items   : [];
+        const eventItems  = Array.isArray(eventsData.items) ? eventsData.items : [];
+
+        // الفعاليات القادمة فقط (اليوم أو بعده)
+        const now = new Date(); now.setHours(0,0,0,0);
+        const upcoming = eventItems.filter(ev=>{
+          const d = ev && ev.date ? new Date(ev.date) : null;
+          return d && !isNaN(d) && d >= now;
+        });
+
+        elNews.textContent = String(newsItems.length);
+        elEv.textContent   = String(upcoming.length);
+      }catch(err){
+        console.error('فشل حساب الإحصاءات', err);
+        elNews.textContent = '—';
+        elEv.textContent   = '—';
+      }
+    })();
+
+    // ===== (6) استجابة إضافية: تصغير عناصر كثيرة على الشاشات الصغيرة =====
+    (function responsive(){
+      const mq = matchMedia('(max-width: 420px)');
+      function apply(x){
+        document.body.classList.toggle('is-xs', x.matches);
+      }
+      apply(mq);
+      mq.addEventListener('change', e=> apply(e));
+    })();
+  </script>
 </body>
 </html>
