--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
       <div>
         <!-- H1 واحد مع لغتين -->
         <h1>
-          <span data-lang="ar">مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</span>
-          <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council – Students’ Voice and University Partner</span>
+          <span data-lang="ar">مجلس طلاب خطوة – صوت الطالب  </span>
+          <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council – Students’ Voice   </span>
         </h1>
-        <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
-        <p data-lang="en" hidden aria-hidden="true">We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
+        <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب والمجتمع بفعاليات نوعية وخدمات موجهة.</p>
+        <p data-lang="en" hidden aria-hidden="true">We empower Khotwa students academically, socially, and culturally, and we build a bridge between students and the community through quality events and tailored services.</p>
         <div class="cta-row">
           <a href="/register.html" class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden aria-hidden="true">Apply for Membership</span></a>
           <a href="/events.html" class="btn btn-outline"><span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden aria-hidden="true">See Upcoming Events</span></a>
@@ -310,3 +310,4 @@
   <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
+
