fix: Add features.css and features.js to all HTML pages

--- a/calendar.html
+++ b/calendar.html
@@ -507,5 +507,9 @@
 
   <!-- CMS/لوحة الإدارة -->
   <script src="/assets/cms-boot.js" defer></script>
+  
+  <!-- الميزات المحسّنة -->
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
 </body>
 </html>
