--- a/news.html
+++ b/news.html
@@ -736,5 +736,9 @@
 
   <!-- يوصل لوحة الإدارة (لا يغيّر الشكل) -->
   <script src="/assets/cms-boot.js" defer></script>
+  
+  <!-- الميزات المحسّنة -->
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
 </body>
 </html>
