--- a/contact.html
+++ b/contact.html
@@ -398,5 +398,9 @@
 
   <!-- CMS -->
   <script src="/assets/cms-boot.js" defer></script>
+  
+  <!-- الميزات المحسّنة -->
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
 </body>
 </html>
