--- a/events.html
+++ b/events.html
@@ -596,5 +596,9 @@
 
   <!-- نظامك (إن وُجد) -->
   <script src="/assets/cms-boot.js" defer></script>
+  
+  <!-- الميزات المحسّنة -->
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
 </body>
 </html>
