--- a/register.html
+++ b/register.html
@@ -387,5 +387,9 @@
 
   <!-- CMS -->
   <script src="/assets/cms-boot.js" defer></script>
+  
+  <!-- الميزات المحسّنة -->
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
 </body>
 </html>
