perf: Optimize performance - minify CSS/JS, optimize images, add Google Analytics
- Minified CSS files (30% smaller)
- Minified JS files (40-50% smaller)
- Optimized PNG images
- Added Google Analytics (G-HCS6PYK04X)
- Updated all HTML pages to use minified assets
- Total file size reduction: ~5.5 KB

Performance improvements:
- Faster page load times
- Reduced bandwidth usage
- Better user experience

--- a/faq.html
+++ b/faq.html
@@ -15,8 +15,11 @@
   <link rel="icon" href="/assets/favicon.ico">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/assets/main.css">
-  <link rel="stylesheet" href="/assets/features.css">
+  <link rel="stylesheet" href="/assets/main.min.css">
+  <link rel="stylesheet" href="/assets/features.min.css">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
+  <script src="/assets/analytics.js"></script>
 </head>
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
@@ -190,8 +193,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/assets/cms-boot.js"></script>
-  <script src="/assets/features.js"></script>
+  <script src="/assets/cms-boot.min.js"></script>
+  <script src="/assets/features.min.js"></script>
   <script>
     // FAQ Toggle Functionality
     document.querySelectorAll('.faq-question').forEach(button => {
