--- a/events.html
+++ b/events.html
@@ -269,6 +269,9 @@
       }
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
+  <script src="/assets/analytics.js"></script>
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
@@ -595,10 +598,10 @@
   </script>
 
   <!-- نظامك (إن وُجد) -->
-  <script src="/assets/cms-boot.js" defer></script>
+  <script src="/assets/cms-boot.min.js" defer></script>
   
   <!-- الميزات المحسّنة -->
-  <link rel="stylesheet" href="/assets/features.css">
-  <script src="/assets/features.js" defer></script>
+  <link rel="stylesheet" href="/assets/features.min.css">
+  <script src="/assets/features.min.js" defer></script>
 </body>
 </html>
