--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
   </style>
 
   <!-- تحميل CSS خارجي -->
-  <link rel="preload" href="/assets/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="/assets/main.css"></noscript>
+  <link rel="preload" href="/assets/main.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/assets/main.min.css"></noscript>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
+  <script src="/assets/analytics.js"></script>
 </head>
 <body>
   <!-- Skip link (لغتين) -->
@@ -400,10 +403,10 @@
   </script>
 
   <!-- نظامك (إن وُجد) -->
-  <script src="/assets/cms-boot.js" defer></script>
+  <script src="/assets/cms-boot.min.js" defer></script>
   
   <!-- الميزات المحسّنة -->
-  <link rel="stylesheet" href="/assets/features.css">
-  <script src="/assets/features.js" defer></script>
+  <link rel="stylesheet" href="/assets/features.min.css">
+  <script src="/assets/features.min.js" defer></script>
 </body>
 </html>
