--- a/resources.html
+++ b/resources.html
@@ -129,6 +129,9 @@
       }
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
+  <script src="/assets/analytics.js"></script>
 </head>
 <body>
   <!-- Skip links -->
@@ -337,10 +340,10 @@
     })();
   </script>
 
-  <script src="/assets/cms-boot.js" defer></script>
+  <script src="/assets/cms-boot.min.js" defer></script>
   
   <!-- الميزات المحسّنة -->
-  <link rel="stylesheet" href="/assets/features.css">
-  <script src="/assets/features.js" defer></script>
+  <link rel="stylesheet" href="/assets/features.min.css">
+  <script src="/assets/features.min.js" defer></script>
 </body>
 </html>
