--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,8 @@
   <title data-lang="ar">التقويم – Khotwa</title>
   <title data-lang="en" hidden>Calendar – Khotwa</title>
 
-  <meta name="description" content="تقويم فعاليات مجلس طلاب خطوة في جامعة لا تروب: ورش، بطولات، وماراثون داخل الحرم.">
+    <meta name="keywords" content="تقويم خطوة, جدول الفعاليات, مواعيد الأنشطة, تقويم أكاديمي, جامعة لا تروب">
+  <meta name="description" content="تقويم شامل لجميع فعاليات وأنشطة مجلس طلاب خطوة. خطط مسبقاً واحجز موعدك لحضور الفعاليات القادمة.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/calendar.html"/>
   <meta name="robots" content="index,follow"/>
   <meta name="color-scheme" content="light dark"/>
