--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title data-lang="ar">تواصل – Khotwa</title>
   <title data-lang="en" hidden>Contact – Khotwa</title>
-  <meta name="description" content="تواصل مع مجلس طلاب خطوة – يسعدنا استقبال أسئلتك واقتراحاتك."/>
+    <meta name="keywords" content="تواصل معنا, اتصل بنا, استفسارات, اقتراحات, دعم الطلاب, مجلس خطوة">
+  <meta name="description" content="تواصل مع مجلس طلاب خطوة. نحن هنا للإجابة على استفساراتك، استقبال اقتراحاتك، وتقديم الدعم اللازم لك."/>
   <link rel="canonical" href="https://khotwastudentcouncil.com/contact.html"/>
   <meta name="robots" content="index,follow"/>
   <meta name="color-scheme" content="light dark"/>
