--- a/events.html
+++ b/events.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>الفعاليات – Khotwa</title>
-  <meta name="description" content="الفعاليات القادمة لمجلس طلاب خطوة في جامعة لا تروب: ورش، بطولات، وماراثون داخل الحرم.">
+    <meta name="keywords" content="فعاليات خطوة, أنشطة طلابية, ورش عمل, لقاءات اجتماعية, فعاليات ثقافية, ملبورن, جامعة لا تروب">
+  <meta name="description" content="تصفح جميع فعاليات وأنشطة مجلس طلاب خطوة القادمة. ورش عمل، لقاءات اجتماعية، فعاليات ثقافية، ورحلات ترفيهية في ملبورن.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/events.html"/>
   <meta name="robots" content="index,follow"/>
   <meta name="color-scheme" content="light dark"/>
