--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="color-scheme" content="light dark"/>
   <title>الأسئلة الشائعة – Khotwa</title>
-  <meta name="description" content="الأسئلة الشائعة حول مجلس طلاب خطوة، العضوية، الفعاليات، والخدمات المقدمة.">
+    <meta name="keywords" content="أسئلة شائعة, FAQ, استفسارات, معلومات عن المجلس, كيفية الانضمام, خدمات المجلس">
+  <meta name="description" content="الأسئلة الشائعة حول مجلس طلاب خطوة: العضوية، الفعاليات، الخدمات، وكيفية التواصل معنا. إجابات واضحة لجميع استفساراتك.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/faq.html"/>
 
   <!-- Favicons -->
