--- a/index.html
+++ b/index.html
@@ -31,9 +31,32 @@
   <meta name="twitter:description" content="فعاليات، أخبار، وخدمات لطلاب خطوة."/>
   <meta name="twitter:image" content="/assets/apple-touch-icon.png"/>
 
-  <!-- Structured Data -->
+  <!-- Structured Data (Schema.org) -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"Khotwa Student Council","url":"https://khotwastudentcouncil.com/","logo":"/assets/apple-touch-icon.png","sameAs":["https://www.instagram.com/khotwa.sc/"]}
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Khotwa Student Council",
+    "alternateName": "مجلس طلاب خطوة",
+    "url": "https://khotwastudentcouncil.com/",
+    "logo": "https://khotwastudentcouncil.com/assets/apple-touch-icon.png",
+    "image": "https://khotwastudentcouncil.com/assets/img/photo-2025-04-26-21-25-14.webp",
+    "description": "مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب - ملبورن. نعمل على دعم الطلاب أكاديمياً واجتماعياً وثقافياً.",
+    "sameAs": [
+      "https://www.instagram.com/khotwa.sc/"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Melbourne",
+      "addressRegion": "VIC",
+      "addressCountry": "AU"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Student Services",
+      "availableLanguage": ["Arabic", "English"]
+    }
+  }
   </script>
 
   <!-- Critical CSS -->
