--- a/news.html
+++ b/news.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>الأخبار – Khotwa</title>
-  <meta name="description" content="آخر أخبار مجلس طلاب خطوة في جامعة لا تروب – إعلانات، فعاليات، وفرص.">
+    <meta name="keywords" content="أخبار خطوة, إعلانات المجلس, فعاليات خطوة, أخبار الطلاب, جامعة لا تروب, ملبورن">
+  <meta name="description" content="آخر أخبار وإعلانات مجلس طلاب خطوة. تابع أحدث الفعاليات، الإنجازات، والتغطيات الإخبارية لأنشطة المجلس في ملبورن.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/news.html"/>
   <meta name="robots" content="index,follow"/>
   <meta name="color-scheme" content="light dark"/>
