--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title data-lang="ar">الموارد – Khotwa</title>
   <title data-lang="en" hidden>Resources – Khotwa</title>
-  <meta name="description" content="روابط وموارد مفيدة لطلاب برنامج خطوة في جامعة لا تروب وكلية لا تروب.">
+    <meta name="keywords" content="موارد طلابية, أدلة أكاديمية, خدمات جامعية, نصائح دراسية, دعم الطلاب, جامعة لا تروب">
+  <meta name="description" content="موارد مفيدة لطلاب خطوة: أدلة أكاديمية، معلومات عن الخدمات الجامعية، نصائح للحياة الجامعية، وروابط مهمة.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/resources.html"/>
   <meta name="robots" content="index,follow"/>
   <meta name="color-scheme" content="light dark"/>
