--- a/register.html
+++ b/register.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title data-lang="ar">التسجيل في عضوية مجلس خطوة</title>
   <title data-lang="en" hidden>Apply for Khotwa Council Membership</title>
-  <meta name="description" content="قدّم طلب الانضمام إلى مجلس طلاب خطوة.">
+    <meta name="keywords" content="التسجيل, انضم للمجلس, عضوية المجلس, تسجيل عضو جديد, مجلس طلاب خطوة">
+  <meta name="description" content="انضم إلى مجلس طلاب خطوة! سجل الآن لتصبح عضواً فعالاً وتساهم في دعم مجتمع طلاب خطوة في ملبورن.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/register.html"/>
   <meta name="robots" content="index,follow"/>
   <meta name="color-scheme" content="light dark"/>
