fix: Add new feature files to all HTML pages
- Added pagination.css, advanced-filters.css, feedback.css
- Added pagination.js, advanced-filters.js, feedback.js, newsletter.js, form-validation.js
- Added RSS feed link to index.html
- All new features now properly loaded on all pages

--- a/calendar.html
+++ b/calendar.html
@@ -256,6 +256,9 @@
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
+  <link rel="stylesheet" href="/assets/pagination.css">
+  <link rel="stylesheet" href="/assets/advanced-filters.css">
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
@@ -515,5 +518,10 @@
   <!-- الميزات المحسّنة -->
   <link rel="stylesheet" href="/assets/features.min.css">
   <script src="/assets/features.min.js" defer></script>
+  <script src="/assets/pagination.js"></script>
+  <script src="/assets/advanced-filters.js"></script>
+  <script src="/assets/feedback.js"></script>
+  <script src="/assets/newsletter.js"></script>
+  <script src="/assets/form-validation.js"></script>
 </body>
 </html>
