--- a/gallery.html
+++ b/gallery.html
@@ -51,6 +51,9 @@
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
+  <link rel="stylesheet" href="/assets/pagination.css">
+  <link rel="stylesheet" href="/assets/advanced-filters.css">
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <nav class="navbar">
@@ -84,5 +87,10 @@
   </footer>
 
   <script src="/assets/cms-boot.min.js"></script>
+  <script src="/assets/pagination.js"></script>
+  <script src="/assets/advanced-filters.js"></script>
+  <script src="/assets/feedback.js"></script>
+  <script src="/assets/newsletter.js"></script>
+  <script src="/assets/form-validation.js"></script>
 </body>
 </html>
