--- a/404.html
+++ b/404.html
@@ -127,6 +127,9 @@
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
+  <link rel="stylesheet" href="/assets/pagination.css">
+  <link rel="stylesheet" href="/assets/advanced-filters.css">
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
@@ -257,5 +260,10 @@
     // Year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <script src="/assets/pagination.js"></script>
+  <script src="/assets/advanced-filters.js"></script>
+  <script src="/assets/feedback.js"></script>
+  <script src="/assets/newsletter.js"></script>
+  <script src="/assets/form-validation.js"></script>
 </body>
 </html>
