--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
+  <link rel="stylesheet" href="/assets/pagination.css">
+  <link rel="stylesheet" href="/assets/advanced-filters.css">
+  <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
 </head>
 <body>
   <!-- Skip link (لغتين) -->
@@ -431,5 +435,10 @@
   <!-- الميزات المحسّنة -->
   <link rel="stylesheet" href="/assets/features.min.css">
   <script src="/assets/features.min.js" defer></script>
+  <script src="/assets/pagination.js"></script>
+  <script src="/assets/advanced-filters.js"></script>
+  <script src="/assets/feedback.js"></script>
+  <script src="/assets/newsletter.js"></script>
+  <script src="/assets/form-validation.js"></script>
 </body>
 </html>
