--- a/news.html
+++ b/news.html
@@ -388,6 +388,8 @@
           <span data-lang="en" hidden aria-hidden="true">Events</span>
         </a>
         <a href="/calendar.html">
+        <a href="/gallery.html"><span data-lang="ar">معرض الصور</span><span data-lang="en" hidden aria-hidden="true">Gallery</span></a>
+        <a href="/faq.html"><span data-lang="ar">الأسئلة الشائعة</span><span data-lang="en" hidden aria-hidden="true">FAQ</span></a>
           <span data-lang="ar">التقويم</span>
           <span data-lang="en" hidden aria-hidden="true">Calendar</span>
         </a>
