--- a/faq.html
+++ b/faq.html
@@ -48,6 +48,8 @@
         <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden aria-hidden="true">News</span></a>
         <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden aria-hidden="true">Events</span></a>
         <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden aria-hidden="true">Calendar</span></a>
+        <a href="/gallery.html"><span data-lang="ar">معرض الصور</span><span data-lang="en" hidden aria-hidden="true">Gallery</span></a>
+        <a href="/faq.html"><span data-lang="ar">الأسئلة الشائعة</span><span data-lang="en" hidden aria-hidden="true">FAQ</span></a>
         <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden aria-hidden="true">Resources</span></a>
         <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden aria-hidden="true">Contact</span></a>
         <button id="lang-toggle" class="lang-toggle" type="button" aria-pressed="false" aria-label="تبديل اللغة">English</button>
@@ -120,9 +122,13 @@
         <div class="faq-answer" id="faq-3">
           <p data-lang="ar">
             ننظم مجموعة متنوعة من الفعاليات تشمل: ورش عمل أكاديمية، لقاءات اجتماعية، فعاليات ثقافية، أنشطة رياضية، ورحلات ترفيهية. يمكنك الاطلاع على جميع الفعاليات القادمة في صفحة <a href="/events.html">الفعاليات</a> أو <a href="/calendar.html">التقويم</a>.
+        <a href="/gallery.html"><span data-lang="ar">معرض الصور</span><span data-lang="en" hidden aria-hidden="true">Gallery</span></a>
+        <a href="/faq.html"><span data-lang="ar">الأسئلة الشائعة</span><span data-lang="en" hidden aria-hidden="true">FAQ</span></a>
           </p>
           <p data-lang="en" hidden>
             We organize a variety of events including: academic workshops, social gatherings, cultural events, sports activities, and recreational trips. You can view all upcoming events on the <a href="/events.html">events page</a> or <a href="/calendar.html">calendar</a>.
+        <a href="/gallery.html"><span data-lang="ar">معرض الصور</span><span data-lang="en" hidden aria-hidden="true">Gallery</span></a>
+        <a href="/faq.html"><span data-lang="ar">الأسئلة الشائعة</span><span data-lang="en" hidden aria-hidden="true">FAQ</span></a>
           </p>
         </div>
       </div>
