feat: إضافة تحسينات Responsive Design والميزات التفاعلية
- إضافة responsive-enhancements.css للتوافق مع جميع الأجهزة
- إضافة mobile-enhancements.js للميزات التفاعلية
- إضافة Dark Mode Toggle مع حفظ التفضيل
- تحسين Mobile Menu مع Hamburger animation
- تحسين Touch Targets للهواتف
- تحسين النماذج على الأجهزة المحمولة
- إضافة Smooth Scroll
- تحسين الصور مع Lazy Loading
- إضافة Performance Monitoring

التحسينات المطبقة:
✅ Breakpoints جديدة: 374px, 480px, 768px, 1024px
✅ Dark Mode Toggle قابل للتبديل
✅ Mobile Menu محسّن مع Overlay
✅ Touch Feedback للعناصر التفاعلية
✅ Form Enhancements للهواتف
✅ Responsive Images
✅ Print Styles
✅ Accessibility improvements

--- a/gallery.html
+++ b/gallery.html
@@ -54,6 +54,8 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/responsive-enhancements.css">
+  <link rel="stylesheet" href="/assets/theme-toggle.css">
 </head>
 <body>
   <nav class="navbar">
@@ -104,5 +106,6 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/mobile-enhancements.js"></script>
 </body>
 </html>
