--- a/register.html
+++ b/register.html
@@ -110,6 +110,8 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/responsive-enhancements.css">
+  <link rel="stylesheet" href="/assets/theme-toggle.css">
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
@@ -405,5 +407,6 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/mobile-enhancements.js"></script>
 </body>
 </html>
