--- a/404.html
+++ b/404.html
@@ -130,6 +130,8 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/responsive-enhancements.css">
+  <link rel="stylesheet" href="/assets/theme-toggle.css">
 </head>
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
@@ -267,5 +269,6 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/mobile-enhancements.js"></script>
 </body>
 </html>
