--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
+  <link rel="stylesheet" href="/assets/responsive-enhancements.css">
+  <link rel="stylesheet" href="/assets/theme-toggle.css">
 </head>
 <body>
   <!-- Skip link (لغتين) -->
@@ -442,5 +444,6 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/mobile-enhancements.js"></script>
 </body>
 </html>
