--- a/resources.html
+++ b/resources.html
@@ -136,6 +136,8 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/responsive-enhancements.css">
+  <link rel="stylesheet" href="/assets/theme-toggle.css">
 </head>
 <body>
   <!-- Skip links -->
@@ -356,5 +358,6 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/mobile-enhancements.js"></script>
 </body>
 </html>
