✨ إضافة 13 ميزة جديدة للموقع
الميزات المضافة:
1. ✅ نظام إدارة المحتوى (CMS) - admin.html
2. ✅ نظام التعليقات
3. ✅ نظام التسجيل في الفعاليات
4. ✅ تكامل وسائل التواصل الاجتماعي
5. ✅ نظام البحث المتقدم
6. ✅ صفحة الإنجازات والجوائز
7. ✅ نظام التصويت/الاستطلاعات
8. ✅ قسم الوظائف والفرص
9. ✅ نظام الإشعارات Push
10. ✅ FAQ التفاعلية
11. ✅ نظام النقاط/الشارات
12. ✅ صفحة الإحصائيات
13. ✅ نظام الشكاوى والاقتراحات

الملفات الجديدة:
- admin.html, admin.css, admin.js
- achievements.html, jobs.html, statistics.html, complaints.html
- comments-and-registration.js, comments-and-registration.css
- all-features.js

التحديثات:
- index.html, news.html, events.html (إضافة الملفات الجديدة)

--- a/events.html
+++ b/events.html
@@ -277,6 +277,7 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
@@ -615,5 +616,7 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/comments-and-registration.js"></script>
+  <script src="/assets/all-features.js"></script>
 </body>
 </html>
