--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
+  <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
 </head>
 <body>
   <!-- Skip link (لغتين) -->
@@ -443,5 +444,7 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/comments-and-registration.js"></script>
+  <script src="/assets/all-features.js"></script>
 </body>
 </html>
