تحسينات شاملة للموقع:
- إصلاح روابط CSS/JS المحذوفة (main.min.css -> main.css, etc.)
- تحديث صفحة الإحصائيات لتحميل البيانات من Backend API
- تحديث صفحة الإنجازات لتحميل البيانات من Backend API
- تحديث صفحة الوظائف لتحميل البيانات من Backend API
- إصلاح روابط favicon في جميع الصفحات

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="/assets/favicon.ico">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/assets/main.min.css">
+  <link rel="stylesheet" href="/assets/main.css">
   
   <style>
     .error-page {
@@ -248,7 +248,6 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/assets/cms-boot.min.js" defer></script>
   <script>
     // Menu Toggle
     const menuToggle = document.getElementById('menu-toggle');
