--- a/complaints.html
+++ b/complaints.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>الشكاوى والاقتراحات - مجلس طلاب خطوة</title>
-  <link rel="stylesheet" href="/assets/main.min.css"/>
-  <link rel="icon" href="/assets/img/favicon-32.png"/>
+  <link rel="stylesheet" href="/assets/main.css"/>
+  <link rel="icon" href="/assets/favicon-32.png"/>
 </head>
 <body>
   <nav class="navbar">
@@ -46,7 +46,6 @@
     </form>
   </main>
   
-  <script src="/assets/cms-boot.min.js"></script>
   <script src="/assets/analytics.js"></script>
   <script src="/assets/all-features.js"></script>
   <script>
