--- a/faq.html
+++ b/faq.html
@@ -17,8 +17,8 @@
   <link rel="icon" href="/assets/favicon.ico">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/assets/main.min.css">
-  <link rel="stylesheet" href="/assets/features.min.css">
+  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/assets/features.css">
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
@@ -204,8 +204,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/assets/cms-boot.min.js"></script>
-  <script src="/assets/features.min.js"></script>
+  <script src="/assets/features.js"></script>
   <script>
     // FAQ Toggle Functionality
     document.querySelectorAll('.faq-question').forEach(button => {
