--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
   <meta name="description" content="معرض صور فعاليات وأنشطة مجلس طلاب خطوة في جامعة لا تروب - ملبورن.">
   
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
-  <link rel="stylesheet" href="/assets/main.min.css">
+  <link rel="stylesheet" href="/assets/main.css">
   
   <style>
     .gallery-grid {
@@ -99,7 +99,6 @@
     </div>
   </footer>
 
-  <script src="/assets/cms-boot.min.js"></script>
   <script src="/assets/pagination.js"></script>
   <script src="/assets/advanced-filters.js"></script>
   <script src="/assets/feedback.js"></script>
