--- a/calendar.html
+++ b/calendar.html
@@ -514,11 +514,10 @@
   </script>
 
   <!-- CMS/لوحة الإدارة -->
-  <script src="/assets/cms-boot.min.js" defer></script>
   
   <!-- الميزات المحسّنة -->
-  <link rel="stylesheet" href="/assets/features.min.css">
-  <script src="/assets/features.min.js" defer></script>
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
   <script src="/assets/pagination.js"></script>
   <script src="/assets/advanced-filters.js"></script>
   <script src="/assets/feedback.js"></script>
