--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
   </style>
 
   <!-- تحميل CSS خارجي -->
-  <link rel="preload" href="/assets/main.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="/assets/main.min.css"></noscript>
+  <link rel="preload" href="/assets/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/assets/main.css"></noscript>
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
@@ -434,11 +434,10 @@
   </script>
 
   <!-- نظامك (إن وُجد) -->
-  <script src="/assets/cms-boot.min.js" defer></script>
   
   <!-- الميزات المحسّنة -->
-  <link rel="stylesheet" href="/assets/features.min.css">
-  <script src="/assets/features.min.js" defer></script>
+  <link rel="stylesheet" href="/assets/features.css">
+  <script src="/assets/features.js" defer></script>
   <script src="/assets/pagination.js"></script>
   <script src="/assets/advanced-filters.js"></script>
   <script src="/assets/feedback.js"></script>
