--- a/news.html
+++ b/news.html
@@ -353,6 +353,7 @@
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
+  <script src="/assets/khotwa-api.js"></script>
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
