--- a/achievements.html
+++ b/achievements.html
@@ -48,6 +48,7 @@
       border: 1px dashed var(--ring, #e5e7eb);
     }
   </style>
+  <script src="/assets/khotwa-api.js"></script>
 </head>
 <body>
   <nav class="navbar">
