--- a/jobs.html
+++ b/jobs.html
@@ -79,6 +79,7 @@
       border: 1px dashed var(--ring, #e5e7eb);
     }
   </style>
+  <script src="/assets/khotwa-api.js"></script>
 </head>
 <body>
   <nav class="navbar">
