Add cache busting to khotwa-api.js to force reload updated file

--- a/achievements.html
+++ b/achievements.html
@@ -48,7 +48,7 @@
       border: 1px dashed var(--ring, #e5e7eb);
     }
   </style>
-  <script src="/assets/khotwa-api.js"></script>
+  <script src="/assets/khotwa-api.js?v=1765938212"></script>
 </head>
 <body>
   <nav class="navbar">
