--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
       color: #64748b;
     }
   </style>
-  <script src="/assets/khotwa-api.js"></script>
+  <script src="/assets/khotwa-api.js?v=1765938212"></script>
 </head>
 
 <body>
