--- a/statistics.html
+++ b/statistics.html
@@ -42,7 +42,7 @@
       50% { opacity: 0.5; }
     }
   </style>
-  <script src="/assets/khotwa-api.js"></script>
+  <script src="/assets/khotwa-api.js?v=1765938212"></script>
 </head>
 <body>
   <nav class="navbar">
