--- a/complaints.html
+++ b/complaints.html
@@ -6,7 +6,7 @@
   <title>الشكاوى والاقتراحات - مجلس طلاب خطوة</title>
   <link rel="stylesheet" href="/assets/main.css"/>
   <link rel="icon" href="/assets/favicon-32.png"/>
-  <script src="/assets/khotwa-api.js"></script>
+  <script src="/assets/khotwa-api.js?v=1765938212"></script>
 </head>
 <body>
   <nav class="navbar">
